refactor: convert ActivityWindow to record